# shellcode-launcher

./: .gitignore  CMakeLists.txt  README.md  make.bat
assets/: payload.txt  run.sh  start.vbs
src/: CMakeLists.txt  main.c  proxy.def  resource.rc
src/resources/: payload-00.txt  payload-01.txt  payload-02.txt  payload-03.txt  payload-04.txt  payload-05.txt  payload-06.txt  payload-07.txt  payload-08.txt  payload-09.txt  payload-10.txt  payload-11.txt  payload-12.txt  payload-13.txt  payload-14.txt  payload-15.txt  payload-16.txt  payload-17.txt  payload-18.txt  payload-19.txt  payload-20.txt  payload-21.txt  payload-22.txt  payload-23.txt  payload-24.txt  payload-25.txt  payload-26.txt  payload-27.txt  payload-28.txt  payload-29.txt  payload-30.txt  payload-31.txt  payload-32.txt  payload-33.txt  payload-34.txt  payload-35.txt  payload-36.txt  payload-37.txt  payload-38.txt  payload-39.txt  (+12 more)
