cmake_minimum_required(VERSION 3.9)

project(shellcode-launcher
        VERSION 0.1.0
        LANGUAGES C)

message(STATUS ${PROJECT_NAME})

set(CMAKE_C_FLAGS "-s -static -Os")
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_FIND_LIBRARY_SUFFIXES .a)
set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR} CACHE PATH "" FORCE)

add_subdirectory(src)
